tests/ui/sized-hierarchy/trait-alias-elaboration.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/trait-alias-elaboration.rs:11:16
   |
LL | trait Qux = Clone;
   | ------------------ additional non-auto trait
LL |
LL | type Foo = dyn Qux + MetaSized;
   |                ^^^   --------- first non-auto trait
   |                |
   |                second non-auto trait comes from this alias
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: MetaSized + MetaSized + Clone {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0225`.
